<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="company_name">skvoll.github.io</string>
    <string name="app_name">CyberTrophy</string>

    <string name="empty" />
    <string name="ok">OK</string>

    <string name="rarity_common">Common</string>
    <string name="rarity_rare">Rare</string>
    <string name="rarity_epic">Epic</string>
    <string name="rarity_legendary">Legendary</string>

    <plurals name="notification_new_games_in_library">
        <item quantity="one">New game in library</item>
        <item quantity="other">%d new games in library</item>
    </plurals>
    <plurals name="notification_games_removed_from_library">
        <item quantity="one">Game removed from library</item>
        <item quantity="other">%d games removed from library</item>
    </plurals>
    <plurals name="notification_new_achievements">
        <item quantity="one">New achievement</item>
        <item quantity="other">New achievements</item>
    </plurals>
    <plurals name="notification_new_achievements_w_count">
        <item quantity="one">New achievement</item>
        <item quantity="other">%d new achievements</item>
    </plurals>
    <plurals name="notification_new_achievements_in_game">
        <item quantity="one">%d new achievement in %s</item>
        <item quantity="other">%d new achievements in %s</item>
    </plurals>
    <string name="notification_new_achievements_in_games">%d new achievements in %d games</string>
    <plurals name="notification_achievements_removed">
        <item quantity="one">Achievement removed</item>
        <item quantity="other">Achievements removed</item>
    </plurals>
    <plurals name="notification_achievements_removed_w_count">
        <item quantity="one">Achievement removed</item>
        <item quantity="other">%d achievements removed</item>
    </plurals>
    <plurals name="notification_achievements_removed_from_game">
        <item quantity="one">%d achievement removed from %s</item>
        <item quantity="other">%d achievements removed from %s</item>
    </plurals>
    <string name="notification_achievements_removed_from_games">%d achievements removed from %d games</string>
    <string name="notification_achievement_unlocked">Achievement unlocked</string>
    <plurals name="notification_achievements_unlocked">
        <item quantity="one">Achievement unlocked</item>
        <item quantity="other">%d achievements unlocked</item>
    </plurals>
    <string name="notification_achievements_unlocked_in_games">%d achievements unlocked in %d games</string>
    <plurals name="notification_games_complete">
        <item quantity="one">Game complete</item>
        <item quantity="other">%d games complete</item>
    </plurals>
    <string name="notification_games_parser_collecting_games">Collecting games</string>
    <string name="notification_games_parser_downloading">Downloading…</string>
    <string name="notification_games_parser_download_failed">Download failed</string>
    <string name="notification_games_parser_complete">Complete</string>
    <string name="notification_games_parser_postpone">Postpone</string>
    <string name="notification_games_parser_retry">Retry</string>

    <string name="sign_in">Sign in</string>
    <string name="powered_by">Powered by</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="steam_logo_description">Steam logo</string>

    <string name="main_menu_dashboard">Dashboard</string>
    <string name="main_menu_games">Games</string>
    <string name="main_menu_notifications">Notifications</string>
    <string name="main_menu_profile">Profile</string>

    <string name="profile_menu_accounts">Accounts</string>
    <string name="profile_menu_settings">Settings</string>

    <string name="title_currently_playing">Currently playing</string>
    <string name="title_games">Games</string>
    <string name="title_notifications">Notifications</string>

    <string name="list_placeholder">List placeholder</string>
    <string name="game_logo_description">Game logo</string>
    <string name="achievement_icon_description">Achievement icon</string>
    <string name="notification_icon_description">Notification icon</string>
    <string name="notification_indicator_description">New notification indicator</string>
    <string name="profile_avatar_description">Profile avatar</string>
    <string name="profile_background_description">Profile background</string>

    <string name="dashboard_game_achievements_progress">%d/%d achievements</string>
    <string name="dashboard_subtitle_recent_achievements">Recent achievements</string>
    <string name="dashboard_subtitle_locked_achievements">Locked achievements</string>

    <string name="achievement_title_hidden">Hidden</string>
    <string name="achievement_rarity">%s (%.1f%%)</string>
    <string name="achievement_subtitle_guides">Guides</string>
    <string name="achievement_show_info_button">Show info</string>
    <string name="achievement_guides_steam_btn">achievement guides in steam</string>
    <string name="achievement_guides_youtube_btn">achievement guides in youtube</string>
    <string name="achievement_guides_google_btn">achievement guides in google</string>
    <string name="empty_achievement_description">No description</string>

    <string name="games_list_tab_in_progress">In progress</string>
    <string name="games_list_tab_incomplete">Incomplete</string>
    <string name="games_list_tab_complete">Complete</string>
    <string name="games_list_item_last_play">Last play: %s</string>
    <plurals name="games_list_item_playtime_minutes">
        <item quantity="one">Playtime: %d minute</item>
        <item quantity="other">Playtime: %d minutes</item>
    </plurals>
    <plurals name="games_list_item_playtime_hours">
        <item quantity="one">Playtime: %d hour</item>
        <item quantity="other">Playtime: %d hours</item>
    </plurals>
    <plurals name="games_list_item_playtime_days">
        <item quantity="one">Playtime: %d day</item>
        <item quantity="other">Playtime: %d days</item>
    </plurals>
    <string name="games_list_item_achievements_progress">%d/%d</string>
    <string name="games_list_item_achievements_count">Achievements: %d</string>

    <string name="achievements_list_locked">Locked</string>
    <string name="achievements_list_unlocked">Unlocked</string>

    <string name="lorem_ipsum_short">Lorem ipsum</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_full">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
</resources>
