<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="2dp"
    tools:alpha="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/achievement_icon_description"
            android:src="@drawable/achievement_icon_empty"
            android:visibility="gone"
            tools:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/notification_icon_description"
                    android:src="@drawable/ic_notifications_black_24dp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    tools:text="@string/lorem_ipsum_short" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                tools:text="12:00" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

