<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/window_background"
    android:orientation="vertical"
    tools:context=".AchievementPreviewDialogFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/default_vertical_indent"
        android:paddingEnd="@dimen/default_horizontal_indent"
        android:paddingStart="@dimen/default_horizontal_indent"
        android:paddingTop="@dimen/default_vertical_indent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/achievement_icon_size"
            android:layout_height="@dimen/achievement_icon_size"
            android:contentDescription="@string/achievement_icon_description"
            android:src="@drawable/achievement_icon_empty" />

        <ImageView
            android:id="@+id/iv_icon_mask"
            android:layout_width="@dimen/achievement_icon_size"
            android:layout_height="@dimen/achievement_icon_size"
            android:contentDescription="@string/achievement_icon_description"
            android:src="@drawable/achievement_icon_hidden"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/AppTheme.Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_indent"
            android:layout_marginStart="@dimen/default_horizontal_indent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            tools:text="Achievement name" />

        <TextView
            android:id="@+id/tv_rarity"
            style="@style/AppTheme.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_indent"
            android:layout_marginStart="@dimen/default_horizontal_indent"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="Common (75%)" />

        <TextView
            android:id="@+id/tv_unlock_date"
            style="@style/AppTheme.Text.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_horizontal_indent"
            android:layout_marginStart="@dimen/default_horizontal_indent"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toBottomOf="@id/tv_rarity"
            tools:text="01.01.1970 00:00" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_achievement_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_vertical_indent"
            android:paddingEnd="@dimen/default_horizontal_indent"
            android:paddingStart="@dimen/default_horizontal_indent"
            android:paddingTop="@dimen/default_vertical_indent">

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="128dp"
                android:text="@string/empty_achievement_description"
                tools:text="@string/lorem_ipsum" />

            <TextView
                style="@style/AppTheme.Text.Subhead.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_vertical_indent"
                android:paddingTop="@dimen/default_vertical_indent"
                android:text="@string/achievement_subtitle_guides" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="128dp">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btn_guides_steam"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:contentDescription="@string/achievement_guides_steam_btn"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_steam_black_24"
                    android:tint="?android:attr/textColorPrimary" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btn_guides_youtube"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:contentDescription="@string/achievement_guides_youtube_btn"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_youtube_black_24dp"
                    android:tint="?android:attr/textColorPrimary" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btn_guides_google"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:contentDescription="@string/achievement_guides_google_btn"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_google_black_24dp"
                    android:tint="?android:attr/textColorPrimary" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_show_info"
            style="@style/AppTheme.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/default_vertical_indent"
            android:layout_marginEnd="@dimen/default_horizontal_indent"
            android:layout_marginStart="@dimen/default_horizontal_indent"
            android:layout_marginTop="@dimen/default_vertical_indent"
            android:text="@string/achievement_show_info_button"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
